<resources>
    <string name="app_name" translatable="false">VLR Radio</string>
    <string name="app_name_long" translatable="false">Viva La Resistance Radio</string>
    <string name="welcome" translatable="true">Welcome to Viva La Resistance Radio</string>
    <string name="buffering" translatable="true">Buffering…</string>
    <string name="tech_dif" translatable="true">Technical difficulties</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="about" translatable="false">About</string>
    <string name="player" translatable="false">Player</string>
    <string name="last_songs" translatable="false">Last Songs</string>
    <string name="about_us">You\'re listening to the best radio in the whole universe - Radio Viva La Resistance. We are located in Gatchina, near Saint-Petersburg. Feel free to send us a message with a feedback.</string>
    <string name="designed_by_mikhail_kartyshov" translatable="false">Designed by Mikhail Kartyshov</string>
    <string name="list_of_songs" translatable="false">List of songs</string>
    <string name="send_message">Send Message</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="name_hint">Your name</string>
    <string name="send_hint">Your message</string>
    <string name="sent">Message sent</string>
    <string name="set_timer">Set timer</string>
    <string name="chill">Chill</string>
    <string name="go_back">Go back</string>
    <string name="timer_set">Timer set to\ </string>
    <string name="chill_time">\ minutes, time to chill</string>
    <string name="swipe_to_refresh">Swipe to refresh</string>
    <string name="click_to_copy">Tap to copy</string>
    <string name="copied">Copied</string>
    <string name="five_min">5 minutes</string>
    <string name="ten_min">10 minutes</string>
    <string name="fifteen_min">15 minutes</string>
    <string name="thirty_min">30 minutes</string>
    <string name="fourtyfive_min">45 minutes</string>
    <string name="best_in_gtn">The best radiostation in Gatchina</string>
    <string name="msg_sent">Message sent</string>
    <string name="fill_the_form">You have to fill the form</string>
</resources>